test/data/syntax-errors/missing-colon.ava
for x times ava "Hello World";